# YouGL

./: .gitignore  123.txt  CMakeLists.txt  ChallengeYouGL.vcxproj  YouGL.vcxproj  pixel.jcy  puppy.jcy  tower.cy  vcpkg_packages.bat
Shaders/: StaticModel.frag  StaticModel.vert
cy_files/: Downtown Tale.cy  The Mouse Returns.cy  Tokyo City 2.cy  test.txt
cy_files/binary/: 1000.my mind.1tail.bcy  10000.Mumys Diamonds.Tomix98.bcy  100000.CYs 100 000th Game.Haakson.bcy  100001.Game 100000.Haakson.bcy  100006.dgh.andreoid.bcy  100007.the ice mansion.superme123.bcy  10001.Egyept.PacMan94.bcy  100011.The Beginning part3.Evilmonkeysa.bcy  100012.I HAVE INTERNET.bluix.bcy  100014.Stone Cave Escape.LAGhostRiff.bcy
src/: CYJsonParser.cpp  CYJsonParser.h  CYLevel.cpp  CYLevel.h  CYWebParser.cpp  CYWebParser.h  Common.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GeometricObject.cpp  GeometricObject.h  main.cpp
src/Dependancies/: glad.c  glad.h  json.hpp
src/Dependencies/: glad.c  glad.h
src/Dependencies/lib/: nfd.lib
src/Editor/: #GeoOctree.cpp#  BoundingBox.cpp  BoundingBox.h  CYPlat.cpp  CYPlat.h  CYWall.cpp  CYWall.cpp.save-failed  CYWall.h  EditorObject.cpp  EditorObject.h  EditorView.cpp  EditorView.h  GeoOctree.cpp  GeoOctree.h  Grid.cpp  Grid.h  MeshBuilder.cpp  MeshBuilder.h
src/Editor/CYObjects/: CYGeneric.cpp  CYGeneric.h  CYObjectProperties.h  CYPlat.cpp  CYPlat.h  CYWall.cpp  CYWall.h  MeshBuilder.cpp  MeshBuilder.h
src/Editor/OldFormat/: OldFormatConvertor.cpp  OldFormatExtractor.cpp  OldFormatExtractor.h  OldFormatUtil.cpp  OldFormatUtil.h
src/GUI/: BaseGUI.h  DebugLogGUI.cpp  DebugLogGUI.h  EditorGUI.cpp  EditorGUI.h  NuklearContext.h  nuklear.cpp  nuklear.h  nuklear_sfml_gl3.h
src/Game/: CYGameLevel.cpp  CYGameLevel.h  CYObjectProperties.h  CYObjects.h  MeshBuilder.cpp  MeshBuilder.h  OldFormatExtractor.cpp  OldFormatUtil.cpp  OldFormatUtil.h  PlayerMovement.cpp  PlayerMovement.h  WorldConstants.h  WorldTextures.cpp  WorldTextures.h
src/Game/OldFormat/: OldFormatConvertor.cpp  OldFormatExtractor.cpp  OldFormatUtil.cpp  OldFormatUtil.h
src/Input/: Controller.h  KeyboardController.cpp  KeyboardController.h
src/Maths/: BasicMathFunctions.h  GlmCommon.h  Matrix.cpp  Matrix.h
src/Renderer/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGLErrorCheck.cpp  OpenGLErrorCheck.h  Primitives.cpp  Primitives.h  RenderData.h  Renderer.cpp  Renderer.h  Transform.h
src/Renderer/Shader/: Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  StaticModelShader.cpp  StaticModelShader.h
src/States/: StateBase.h  StatePlaying.cpp  StatePlaying.h
src/Util/: Collision.cpp  Collision.h  FPSCounter.cpp  FPSCounter.h  FileUtil.cpp  FileUtil.h  MouseRay.cpp  MouseRay.h  Serializable.h  Types.h  fs.h
